# corner_detection

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/alg/: math_helper.cpp  math_helper.h  rotation.h  timer.h
src/config/: config.cpp  config.h
src/def/: macro_def.h  type_def.h
src/detector/: detector.cpp  detector.h  optimizator.cpp  optimizator.h  processor.h  rectifier.h  rectifier_usage.md
vsproj/: cornerDetection.vcxproj  cornerDetection.vcxproj.filters
